2007-12-06  Aidan Kehoe  <kehoea@parhasard.net>

	* tests.c (Ftest_data_format_conversion):
	Move those tests that expect that iso-8859-2 is ISO
	2022-compatible to testing iso-latin-2-with-esc instead.

2007-12-02  Ron Isaacson  <ron.isaacson@morganstanley.com>

	* frame.c (change_frame_size):
	(change_frame_size_1):
	Must reset pending flag per-frame, so do it in the latter.

2007-12-04  Aidan Kehoe  <kehoea@parhasard.net>

	* file-coding.c:
	* file-coding.c (find_coding_system):
	C-accessible version of #'find-coding-system that doesn't
	necessarily call the autoload code, for use in
	#'autoload-coding-system (which we allow to overwrite autoloaded
	coding systems) and make_coding_system_1 (which has to).
	* file-coding.c (Ffind_coding_system):
	Move the implementation to find_coding_system; call that function
	with a do_autoloads argument of 1. 
	* file-coding.c (Fautoload_coding_system):
	New.
	* file-coding.c (add_coding_system_to_list_mapper):
	When returning a list of coding systems, don't call the autoload
	code.
	* file-coding.c (make_coding_system_1):
	* file-coding.c (Fcopy_coding_system):
	* file-coding.c (syms_of_file_coding):

	Implement autoloaded coding systems. The form to be evaluated to
	load a given coding system is stored as the value in
	Vcoding_system_hash_table; this form is evaluated if
	find-coding-system is called with the symbol name of the coding
	system as its argument.

	This is also tied in with the POSIX locale infrastructure by means
	of posix-charset-to-coding-system-hash. 

2007-11-29  Aidan Kehoe  <kehoea@parhasard.net>

	* mule-ccl.c (ccl_driver):
	Take out a static variable I was using for debugging. 

2007-11-26  Aidan Kehoe  <kehoea@parhasard.net>

	* doprnt.c: 
	Default to a buffer size of 350 for the sprintf call, but increase
	it if the precision and minwidth indicate that it should be
	bigger. Issue reported by Hans de Graaff; bug originally fixed by
	Sebastian Freundt in SXEmacs following the change I merged on